Update to new upstream release 0.16.0.